syntax = "proto3";
package wiradata.users;

option go_package = "pb/users;users";
option java_package = "com.wiradata.erpapplication.users";
option java_multiple_files = true;

message RequestPassword {
  string id = 1;
  string user_id = 2;
  bool is_used = 3;
  string created_at = 4;
}